// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs Collapsed matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      {
        "alignSelf": "flex-start",
        "width": 160,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        {
          "overflow": "hidden",
        }
      }
      testID="breadcrumbs"
    >
      <View
        onLayout={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
            }
          }
        >
          <View
            accessibilityLabel="Home"
            accessibilityRole="link"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text
              style={
                {
                  "color": "#13241C",
                  "fontFamily": "Inter-Medium",
                  "fontSize": 12,
                  "lineHeight": 16,
                }
              }
              suppressHighlighting={true}
            >
              Home
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#5C7268",
                "fontFamily": "Inter-Medium",
                "fontSize": 12,
                "lineHeight": 16,
              }
            }
            suppressHighlighting={true}
          >
            /
          </Text>
          <View
            accessibilityLabel="Explore"
            accessibilityRole="link"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text
              style={
                {
                  "color": "#13241C",
                  "fontFamily": "Inter-Medium",
                  "fontSize": 12,
                  "lineHeight": 16,
                }
              }
              suppressHighlighting={true}
            >
              Explore
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#5C7268",
                "fontFamily": "Inter-Medium",
                "fontSize": 12,
                "lineHeight": 16,
              }
            }
            suppressHighlighting={true}
          >
            /
          </Text>
          <View
            accessibilityLabel="Activity"
            accessibilityRole="link"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text
              style={
                {
                  "color": "#13241C",
                  "fontFamily": "Inter-Medium",
                  "fontSize": 12,
                  "lineHeight": 16,
                }
              }
              suppressHighlighting={true}
            >
              Activity
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#5C7268",
                "fontFamily": "Inter-Medium",
                "fontSize": 12,
                "lineHeight": 16,
              }
            }
            suppressHighlighting={true}
          >
            /
          </Text>
          <View
            accessibilityLabel="Profile"
            accessibilityRole="link"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text
              style={
                {
                  "color": "#13241C",
                  "fontFamily": "Inter-Medium",
                  "fontSize": 12,
                  "lineHeight": 16,
                }
              }
              suppressHighlighting={true}
            >
              Profile
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#5C7268",
                "fontFamily": "Inter-Medium",
                "fontSize": 12,
                "lineHeight": 16,
              }
            }
            suppressHighlighting={true}
          >
            /
          </Text>
          <Text
            style={
              {
                "color": "#13241C",
                "fontFamily": "Inter-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
            suppressHighlighting={true}
          >
            Wallet
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Breadcrumbs Long matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      {
        "overflow": "hidden",
      }
    }
    testID="breadcrumbs"
  >
    <View
      onLayout={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <View
          accessibilityLabel="Home"
          accessibilityRole="link"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <Text
            style={
              {
                "color": "#13241C",
                "fontFamily": "Inter-Medium",
                "fontSize": 12,
                "lineHeight": 16,
              }
            }
            suppressHighlighting={true}
          >
            Home
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "#5C7268",
              "fontFamily": "Inter-Medium",
              "fontSize": 12,
              "lineHeight": 16,
            }
          }
          suppressHighlighting={true}
        >
          /
        </Text>
        <View
          accessibilityLabel="Explore"
          accessibilityRole="link"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <Text
            style={
              {
                "color": "#13241C",
                "fontFamily": "Inter-Medium",
                "fontSize": 12,
                "lineHeight": 16,
              }
            }
            suppressHighlighting={true}
          >
            Explore
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "#5C7268",
              "fontFamily": "Inter-Medium",
              "fontSize": 12,
              "lineHeight": 16,
            }
          }
          suppressHighlighting={true}
        >
          /
        </Text>
        <View
          accessibilityLabel="Activity"
          accessibilityRole="link"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <Text
            style={
              {
                "color": "#13241C",
                "fontFamily": "Inter-Medium",
                "fontSize": 12,
                "lineHeight": 16,
              }
            }
            suppressHighlighting={true}
          >
            Activity
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "#5C7268",
              "fontFamily": "Inter-Medium",
              "fontSize": 12,
              "lineHeight": 16,
            }
          }
          suppressHighlighting={true}
        >
          /
        </Text>
        <View
          accessibilityLabel="Profile"
          accessibilityRole="link"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <Text
            style={
              {
                "color": "#13241C",
                "fontFamily": "Inter-Medium",
                "fontSize": 12,
                "lineHeight": 16,
              }
            }
            suppressHighlighting={true}
          >
            Profile
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "#5C7268",
              "fontFamily": "Inter-Medium",
              "fontSize": 12,
              "lineHeight": 16,
            }
          }
          suppressHighlighting={true}
        >
          /
        </Text>
        <Text
          style={
            {
              "color": "#13241C",
              "fontFamily": "Inter-Bold",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
          suppressHighlighting={true}
        >
          Wallet
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Breadcrumbs Short matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      {
        "overflow": "hidden",
      }
    }
    testID="breadcrumbs"
  >
    <View
      onLayout={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <View
          accessibilityLabel="Home"
          accessibilityRole="link"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <Text
            style={
              {
                "color": "#13241C",
                "fontFamily": "Inter-Medium",
                "fontSize": 12,
                "lineHeight": 16,
              }
            }
            suppressHighlighting={true}
          >
            Home
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "#5C7268",
              "fontFamily": "Inter-Medium",
              "fontSize": 12,
              "lineHeight": 16,
            }
          }
          suppressHighlighting={true}
        >
          /
        </Text>
        <Text
          style={
            {
              "color": "#13241C",
              "fontFamily": "Inter-Bold",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
          suppressHighlighting={true}
        >
          Wallet
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
